--- a/front/src/css/app.scss
+++ b/front/src/css/app.scss
@@ -1,1 +1,100 @@
 // app global css in SCSS form
+.header {
+  justify-content: space-between;
+  flex-direction: row !important;
+  display: flex;
+  align-items: center;
+  height: 30px;
+  position: fixed;
+}
+
+.footer {
+  background-color: #ffff;
+  margin-top: 5%;
+  height: 60px;
+  position: fixed;
+  justify-content: space-between;
+  flex-direction: row !important;
+  display: flex;
+  align-items: center;
+  bottom: 0; /* on le colle en bas */
+
+  width: 100%;
+}
+body {
+  justify-content: space-between;
+  flex-direction: column !important;
+  display: flex;
+}
+.title {
+  margin-left: 7px;
+  width: 229px;
+  left: 23px;
+  top: 16px;
+  border-radius: nullpx;
+  font-size: 20px;
+  font-family: "Mulish";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 25px;
+
+  /* identical to box height */
+
+  color: #2c272e;
+}
+
+.card {
+  padding: 5%;
+  margin-top: 5%;
+  border-radius: 30%;
+}
+
+.my-card {
+  box-shadow: 8px 8px 12px #aaa;
+}
+
+.logo {
+  margin-right: -200px;
+  height: 16px;
+  width: 16px;
+  left: 4px;
+  top: 4px;
+  justify-content: space-between;
+  flex-direction: column !important;
+  display: flex;
+  align-items: center;
+  border-radius: 0px;
+  margin-right: 20px;
+}
+
+.home-title {
+  padding: 7%;
+  width: 90%;
+  height: 30%;
+  margin-left: 23px;
+  margin-right: 30px;
+  margin-bottom: 30px;
+
+  font-family: "Mulish";
+  font-style: normal;
+  font-weight: 800;
+  font-size: 30px;
+  line-height: 38px;
+
+  /* Gray 1 */
+  color: #333333;
+}
+
+.menu-center {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+img.navbar {
+  left: 0px;
+  top: 0px;
+}
+#pic2 {
+  position: absolute;
+}
